cicd: fix github context

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -16,7 +16,7 @@ on:
       - "pyproject.toml"
 
 concurrency:
-  group: staging-${{ github.event.pull_request.number || github.ref }}
+  group: staging-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
