--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -21,9 +21,40 @@ concurrency:
 
 jobs:
   build-and-publish-package:
-    permissions:
-      contents: write
-    uses: usepolvo/workflows/.github/workflows/publish-python-package.yml@develop
-    with:
-      version_update: patch
-    secrets: inherit
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref }}
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+
+      - name: Install build-dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements-build.txt
+
+      - name: Bump up package version
+        run: |
+          bump2version patch --no-tag --no-commit
+
+      - name: Commit and push changes
+        run: |
+          git config --local user.name 'github-actions[bot]'
+          git config --local user.email 'github-actions[bot]@users.noreply.github.com'
+          git add .
+          git commit --allow-empty -m "chore: version update"
+          git push
+
+      - name: Build package and publish
+        working-directory: src
+        run: |
+          python -m build
+          python -m twine upload \
+          --repository usepolvo \
+          --username '__token__' \
+          --password '${{ secrets.TEST_PYPI_TOKEN }}' \
+          dist/* \
+          --verbose
