cicd: bump2version fix

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -37,9 +37,8 @@ jobs:
           pip install -r requirements-build.txt
 
       - name: Bump up package version
-        working-directory: src
         run: |
-          bump2version patch
+          bump2version patch --verbose
 
       - name: Commit and push changes
         run: |
