--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,10 +3,10 @@ current_version = 0.1.1
 commit = True
 tag = True
 
-[bumpversion:file:pyproject.toml]
+[bumpversion:file:src/pyproject.toml]
 search = version = "{current_version}"
 replace = version = "{new_version}"
 
-[bumpversion:file:README.md]
+[bumpversion:file:src/README.md]
 search = Version: {current_version}
 replace = Version: {new_version}
