--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,6 +7,6 @@ tag = True
 search = version = "{current_version}"
 replace = version = "{new_version}"
 
-[bumpversion:file:src/README.md]
+[bumpversion:file:README.md]
 search = Version: {current_version}
 replace = Version: {new_version}
