--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -51,7 +51,7 @@ jobs:
           git commit --allow-empty -m "chore: version update"
           git push
         env:
-          GIT_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          GIT_TOKEN: ${{ secrets.GH_PAT_TOKEN }}
 
       - name: Build package and publish
         working-directory: src
