cicd: add req file

--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Commit and push if dependencies updated
         if: steps.git_diff.outputs.changes == 'true'
         run: |
-          git add requirements.txt
+          git add requirements-*.txt
           git commit -m "chore: update dependencies to latest versions"
           git push
         env:
