chore: small tweaks + deps update

--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "uvicorn",
     "requests",
     "pydantic",
+    "pydantic-settings",
     "python-dotenv",
     "cryptography",
     "loguru",
