--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -1,5 +1,5 @@
-setuptools>=42
-wheel
-build
-twine
-bump2version
+build==1.2.1
+bump2version==1.0.1
+setuptools==70.1.1
+twine==5.1.1
+wheel==0.43.0
