--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiohttp==3.10.1
 asyncio==3.4.3
 cachetools==5.4.0
 fastapi==0.111.1
@@ -7,6 +8,6 @@ pydantic==2.8.2
 python-dotenv==1.0.1
 ratelimit==2.2.1
 requests==2.32.3
-retry==0.9.2
 stripe==10.5.0
+tenacity==9.0.0
 uvicorn==0.30.3
