--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -9,6 +9,7 @@ description = "A comprehensive integration package supporting various services."
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
+    "aiohttp==3.10.1",
     "asyncio==3.4.3",
     "cachetools==5.4.0",
     "fastapi==0.111.1",
@@ -18,8 +19,8 @@ dependencies = [
     "python-dotenv==1.0.1",
     "ratelimit==2.2.1",
     "requests==2.32.3",
-    "retry==0.9.2",
     "stripe==10.5.0",
+    "tenacity==9.0.0",
     "uvicorn==0.30.3",
 ]
 [[project.authors]]
