--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ fastapi==0.111.1
 loguru==0.7.2
 pydantic-settings==2.3.4
 pydantic==2.8.2
+pyngrok==7.2.0
 python-dotenv==1.0.1
 ratelimit==2.2.1
 requests==2.32.3
