--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 aiohttp==3.10.1
+anthropic==0.34.1
 asyncio==3.4.3
 cachetools==5.4.0
 fastapi==0.111.1
+google-generativeai==0.7.2
 loguru==0.7.2
+openai==1.42.0
 pydantic-settings==2.3.4
 pydantic==2.8.2
 pyngrok==7.2.0
