--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asyncio==3.4.3
 cachetools==5.4.0
 fastapi==0.111.1
 google-generativeai==0.7.2
+hubspot-api-client==9.0.0
 loguru==0.7.2
 openai==1.42.0
 pydantic-settings==2.3.4
