--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -33,6 +33,7 @@ openai = ["openai==1.42.0"]
 claude = ["anthropic==0.34.1"]
 gemini = ["google-generativeai==0.7.2"]
 hubspot = ["hubspot-api-client==9.0.0"]
+linear = ["gql==3.5.0"]
 all = [
     "stripe==10.5.0",
     "openai==1.42.0",
