--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -6,7 +6,9 @@ on:
     branches:
       - develop
     paths-ignore:
-      - "README*.md"
+      - "*.md"
+      - "*.yml"
+      - "*.yaml"
       - ".gitignore"
       - ".github/**"
       - ".vscode/**"
