--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -2,6 +2,11 @@ name: 🚀 Deploy prod version
 
 on:
   workflow_dispatch:
+    inputs:
+      source_branch:
+        description: 'Source branch'
+        required: true
+        default: 'main'
 
 concurrency:
   group: prod-${{ github.ref }}
@@ -14,7 +19,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: main
+          ref: ${{ inputs.source_branch }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -23,11 +28,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements-build.txt
-
-      - name: Configure Git
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
       - name: Build package and publish
         working-directory: src
