--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -4,24 +4,21 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "usepolvo"
-version = "0.1.37"
+version = "0.2.0"
 description = "A comprehensive integration package supporting various services."
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
-    "aiohttp==3.10.1",
+    "aiohttp==3.11.11",
     "asyncio==3.4.3",
-    "cachetools==5.4.0",
-    "fastapi==0.111.1",
-    "loguru==0.7.2",
-    "pydantic-settings==2.3.4",
-    "pydantic==2.8.2",
-    "pyngrok==7.2.0",
+    "gql==3.5.0",
+    "pydantic==2.10.6",
+    "pydantic-settings==2.7.1",
+    "pyngrok==7.2.3",
     "python-dotenv==1.0.1",
     "ratelimit==2.2.1",
     "requests==2.32.3",
     "tenacity==9.0.0",
-    "uvicorn==0.30.3",
 ]
 [[project.authors]]
 name = "Caio Pizzol"
