feat: new token persistence

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 aiohttp==3.11.11
 anthropic==0.45.2
 asyncio==3.4.3
+cryptography==44.0.0
 google-generativeai==0.8.4
 gql==3.5.0
 hubspot-api-client==11.1.0
 openai==1.61.0
-pydantic==2.10.6
 pydantic-settings==2.7.1
+pydantic==2.10.6
 pyngrok==7.2.3
 python-dotenv==1.0.1
 ratelimit==2.2.1
