--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -11,9 +11,10 @@ requires-python = ">=3.7"
 dependencies = [
     "aiohttp==3.11.11",
     "asyncio==3.4.3",
+    "cryptography==44.0.0",
     "gql==3.5.0",
-    "pydantic==2.10.6",
     "pydantic-settings==2.7.1",
+    "pydantic==2.10.6",
     "pyngrok==7.2.3",
     "python-dotenv==1.0.1",
     "ratelimit==2.2.1",
