--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "python-dotenv==1.0.1",
     "ratelimit==2.2.1",
     "requests==2.32.3",
+    "requests-toolbelt==1.0.0",
     "tenacity==9.0.0",
 ]
 [[project.authors]]
